fixed overflow on the whole page to make it look better

--- a/public/styles/algorithms/sorting/quick.css
+++ b/public/styles/algorithms/sorting/quick.css
@@ -4,6 +4,7 @@
 
 html {
   height: 100vh;
+  overflow-y: hidden;
 }
 
 body {
